--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 # Separated so that we can use network separation for protection
 server.port=8087
 
-spring.datasource.url=jdbc:mysql://${DBHOST:localhost}:${DBPORT:3306}/${DBNAME:heetiscleardbreferencedev}?useSSL=${USE_SSL:false}&autoReconnect=true&autoReconnectForPools=true&verifyServerCertificate=false&requireSSL=${USE_SSL:false}
+spring.datasource.url=jdbc:mysql://${DBHOST:localhost}:${DBPORT:3306}/${DBNAME:heetiscleardbreference}?useSSL=${USE_SSL:false}&autoReconnect=true&autoReconnectForPools=true&verifyServerCertificate=false&requireSSL=${USE_SSL:false}
 spring.datasource.username=${DBUSER:root}
 spring.datasource.password=${DBPASSWORD:}
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -39,7 +39,7 @@ flyway.placeholder-prefix=
 flyway.placeholder-replacement=
 flyway.placeholder-suffix=
 flyway.placeholders.*=
-flyway.schemas=heetiscleardbreferencedev
+flyway.schemas=heetiscleardbreference
 flyway.sql-migration-prefix=V
 flyway.sql-migration-separator=
 flyway.sql-migration-suffix=.sql
