--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,7 +39,7 @@ flyway.placeholder-prefix=
 flyway.placeholder-replacement=
 flyway.placeholder-suffix=
 flyway.placeholders.*=
-flyway.schemas=heetiscleardbreference
+flyway.schemas=${DBNAME:heetiscleardbreference}
 flyway.sql-migration-prefix=V
 flyway.sql-migration-separator=
 flyway.sql-migration-suffix=.sql
