TISDEV-1288 - Limit reference search of trusts and sites to 100, warn the user if the limit is reached

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -52,5 +52,7 @@ flyway.initOnMigrate=true
 spring.jpa.show-sql=true
 spring.jpa.format-sql=true
 
+search.result.limit=100
+
 #log settings
 logging.file=${LOG_DIR:${HOME}}/reference.log
