--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
 		<springfox-version>2.4.0</springfox-version>
 	</properties>
 
+	<scm>
+		<developerConnection>scm:git:git@github.com:Health-Education-England/TIS-REFERENCE.git</developerConnection>
+		<tag>HEAD</tag>
+	</scm>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -69,7 +74,7 @@
 		<dependency>
 			<groupId>com.transformuk.hee</groupId>
 			<artifactId>tis-security-jwt</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>beta-001</version>
 		</dependency>
 
 		<!--SpringFox dependencies -->
@@ -131,6 +136,18 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.5.2</version>
+				<dependencies>
+					<dependency>
+						<groupId>org.apache.maven.scm</groupId>
+						<artifactId>maven-scm-provider-gitexe</artifactId>
+						<version>1.9.4</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 		</plugins>
 	</build>
