--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.transformuk.hee</groupId>
 	<artifactId>reference</artifactId>
-	<version>beta-001</version>
+	<version>beta-002-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>HEE TIS REFERENCE DATA SERVICE</name>
@@ -25,7 +25,7 @@
 
 	<scm>
 		<developerConnection>scm:git:git@github.com:Health-Education-England/TIS-REFERENCE.git</developerConnection>
-		<tag>beta-001</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<dependencies>
