- prep for release

--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,9 @@
 						<version>1.9.4</version>
 					</dependency>
 				</dependencies>
+				<configuration>
+					<tagNameFormat>@{project.version}</tagNameFormat>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
