--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.transformuk.hee</groupId>
 	<artifactId>reference</artifactId>
-	<version>0.0.4</version>
+	<version>0.0.5</version>
 	<packaging>jar</packaging>
 
 	<name>HEE TIS REFERENCE DATA SERVICE</name>
@@ -22,6 +22,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
 		<springfox-version>2.4.0</springfox-version>
+		<shared.modules.version>0.0.5</shared.modules.version>
 	</properties>
 
 	<scm>
@@ -73,7 +74,7 @@
 		<dependency>
 			<groupId>com.transformuk.hee</groupId>
 			<artifactId>tis-security-jwt</artifactId>
-			<version>0.0.4</version>
+			<version>${shared.modules.version}</version>
 		</dependency>
 
 		<!--SpringFox dependencies -->
