--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 		<relativePath />
 	</parent>
 
+    <groupId>com.transformuk.hee</groupId>
 	<artifactId>reference</artifactId>
 	<version>1.0.0</version>
 	<packaging>jar</packaging>
