--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -13,6 +13,9 @@
 # Full reference is available at:
 # http://docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html
 # ===================================================================
+search:
+    result:
+        limit: 100
 
 management:
     context-path: /management
