--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<modules>
+		<module>reference-api</module>
 		<module>reference-service</module>
 	</modules>
 
