--- a/reference-api/pom.xml
+++ b/reference-api/pom.xml
@@ -2,14 +2,24 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<parent>
-		<artifactId>reference</artifactId>
-		<groupId>com.transformuk.hee.tis</groupId>
-		<version>1.0.0</version>
-	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
+	<groupId>com.transformuk.hee</groupId>
 	<artifactId>reference-api</artifactId>
+	<version>1.0.0</version>
 
+	<dependencies>
+		<dependency>
+			<groupId>com.transformuk.hee</groupId>
+			<artifactId>tis-parent-api</artifactId>
+			<version>1.0.1</version>
+			<type>pom</type>
+		</dependency>
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>1.1.0.Final</version>
+		</dependency>
+	</dependencies>
 
 </project>
