pom updates to include language levels

--- a/reference-client/pom.xml
+++ b/reference-client/pom.xml
@@ -8,4 +8,12 @@
 	<artifactId>reference-client</artifactId>
 	<version>1.0.0</version>
 
+	<properties>
+		<java.version>1.8</java.version>
+		<maven.compiler.source>${java.version}</maven.compiler.source>
+		<maven.compiler.target>${java.version}</maven.compiler.target>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+	</properties>
+
 </project>
