--- a/reference-service/pom.xml
+++ b/reference-service/pom.xml
@@ -12,7 +12,7 @@
 
 	<groupId>com.transformuk.hee.tis</groupId>
 	<artifactId>reference-service</artifactId>
-	<version>2.1.4</version>
+	<version>2.2.0</version>
 	<packaging>war</packaging>
 
 	<prerequisites>
@@ -174,6 +174,11 @@
 			</exclusions>
 		</dependency>
 
+		<dependency>
+			<groupId>com.transformuk.hee</groupId>
+			<artifactId>audit</artifactId>
+			<version>2.1.0</version>
+		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
