--- a/reference-client/pom.xml
+++ b/reference-client/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>com.transformuk.hee</groupId>
 	<artifactId>reference-client</artifactId>
-	<version>1.0.0</version>
+	<version>1.1.3</version>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -20,13 +20,19 @@
 		<dependency>
 			<groupId>com.transformuk.hee</groupId>
 			<artifactId>tis-parent-client</artifactId>
-			<version>1.0.2</version>
+			<version>1.1.0</version>
 			<type>pom</type>
 		</dependency>
 		<dependency>
 			<groupId>com.transformuk.hee</groupId>
 			<artifactId>reference-api</artifactId>
-			<version>1.0.0</version>
+			<version>1.0.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.transformuk.hee</groupId>
+			<artifactId>keycloak-client</artifactId>
+			<version>2.1.0</version>
 		</dependency>
 	</dependencies>
 </project>
