--- a/reference-service/pom.xml
+++ b/reference-service/pom.xml
@@ -372,6 +372,13 @@
     <build>
         <defaultGoal>spring-boot:run</defaultGoal>
         <plugins>
+			<plugin>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.1.1</version>
+				<configuration>
+					<attachClasses>true</attachClasses>
+				</configuration>
+			</plugin>
             <plugin>
                 <groupId>com.github.ekryd.sortpom</groupId>
                 <artifactId>sortpom-maven-plugin</artifactId>
