--- a/reference-service/pom.xml
+++ b/reference-service/pom.xml
@@ -12,7 +12,7 @@
 
 	<groupId>com.transformuk.hee.tis</groupId>
 	<artifactId>reference-service</artifactId>
-	<version>2.3.2</version>
+	<version>2.3.3</version>
 	<packaging>war</packaging>
 
 	<prerequisites>
@@ -47,8 +47,6 @@
 		<maven.version>3.0.0</maven.version>
 		<metrics-spring.version>3.1.3</metrics-spring.version>
 		<node.version>v6.10.0</node.version>
-		<!-- These remain empty unless the corresponding profile is active -->
-		<profile.swagger/>
 		<!-- Sonar properties -->
 		<project.testresult.directory>${project.build.directory}/test-results</project.testresult.directory>
 		<prometheus-simpleclient.version>0.0.20</prometheus-simpleclient.version>
@@ -99,7 +97,7 @@
 
 		<sortpom-maven-plugin.version>2.5.0</sortpom-maven-plugin.version>
 		<!-- Spring properties -->
-		<springfox.version>2.6.1</springfox.version>
+		<springfox.version>2.4.0</springfox.version>
 		<tis.shared.modules.version>2.0.1</tis.shared.modules.version>
 		<undertow.version>1.4.10.Final</undertow.version>
 		<validation-api.version>1.1.0.Final</validation-api.version>
@@ -231,12 +229,11 @@
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger2</artifactId>
 			<version>${springfox.version}</version>
-			<exclusions>
-				<exclusion>
-					<artifactId>mapstruct</artifactId>
-					<groupId>org.mapstruct</groupId>
-				</exclusion>
-			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>${springfox.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -562,12 +559,6 @@
 	</build>
 	<profiles>
 		<profile>
-			<id>swagger</id>
-			<properties>
-				<profile.swagger>,swagger</profile.swagger>
-			</properties>
-		</profile>
-		<profile>
 			<id>dev</id>
 			<activation>
 				<activeByDefault>true</activeByDefault>
@@ -610,7 +601,7 @@
 				<!-- log configuration -->
 				<logback.loglevel>INFO</logback.loglevel>
 				<!-- default Spring profiles -->
-				<spring.profiles.active>prod${profile.swagger}</spring.profiles.active>
+				<spring.profiles.active>prod</spring.profiles.active>
 			</properties>
 		</profile>
 		<profile>
