--- a/reference-service/pom.xml
+++ b/reference-service/pom.xml
@@ -549,6 +549,21 @@
   </build>
   <profiles>
     <profile>
+      <id>nonexec</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>3.0.2</version>
+            <configuration>
+              <classifier>nonexec</classifier>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
       <id>dev</id>
       <activation>
         <activeByDefault>true</activeByDefault>
