--- a/reference-service/src/main/resources/config/application-dev.yml
+++ b/reference-service/src/main/resources/config/application-dev.yml
@@ -38,6 +38,7 @@ spring:
         database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
         database: MYSQL
         show-sql: true
+        format-sql: true
         properties:
             hibernate.id.new_generator_mappings: true
             hibernate.cache.use_second_level_cache: false
