--- a/reference-client/src/main/resources/config/referenceclientapplication.properties
+++ b/reference-client/src/main/resources/config/referenceclientapplication.properties
@@ -1,3 +1,6 @@
 reference.server.name=${REFERENCE_HOST:localhost}
 reference.server.port=${REFERENCE_PORT:80}
 reference.service.url=${REFERENCE_SERVER_URL:http://${reference.server.name}:${reference.server.port}/reference}
+
+reference.client.rate.limit=${REFERENCE_CLIENT_RATE_LIMIT:100}
+reference.client.bulk.rate.limit=${REFERENCE_CLIENT_BULK_RATE_LIMIT:10}
