logging issue fix

--- a/reference-service/src/main/resources/config/application.yml
+++ b/reference-service/src/main/resources/config/application.yml
@@ -123,3 +123,6 @@ jhipster:
 # ===================================================================
 
 application:
+
+logging:
+  file: ${LOG_DIR:${HOME}}/reference.log
