--- a/reference-service/src/main/resources/config/application.yml
+++ b/reference-service/src/main/resources/config/application.yml
@@ -24,6 +24,8 @@ management:
     health:
         mail:
             enabled: false # When using the MailService, configure an SMTP server and set this to true
+    add-application-context-header: false
+
 spring:
     application:
         name: reference
