--- a/reference-service/src/test/resources/config/application.yml
+++ b/reference-service/src/test/resources/config/application.yml
@@ -115,3 +115,4 @@ jhipster:
 # ===================================================================
 
 application:
+  relaxSqlInjectionSanitiser : ${RELAX_SQL_INJECTION_SANITISER:false}
