--- a/reference-service/src/main/resources/config/application-prod.yml
+++ b/reference-service/src/main/resources/config/application-prod.yml
@@ -118,3 +118,6 @@ jhipster:
 # ===================================================================
 
 application:
+
+endpoints:
+    enabled: false # disable all monitoring endpoints
