updated prometheus endpoint to match other services

--- a/reference-service/src/main/resources/config/application-prod.yml
+++ b/reference-service/src/main/resources/config/application-prod.yml
@@ -97,7 +97,7 @@ jhipster:
             prefix: reference
         prometheus:
             enabled: true
-            endpoint: /prometheusMetrics
+            endpoint: /management/prometheus
         logs: # Reports Dropwizard metrics in the logs
             enabled: false
             reportFrequency: 60 # in seconds
