--- a/reference-service/pom.xml
+++ b/reference-service/pom.xml
@@ -6,13 +6,13 @@
   <parent>
     <artifactId>tis-parent</artifactId>
     <groupId>com.transformuk.hee</groupId>
-    <version>2.1.0</version>
+    <version>2.2.3</version>
     <relativePath/>
   </parent>
 
   <groupId>com.transformuk.hee.tis</groupId>
   <artifactId>reference-service</artifactId>
-  <version>3.4.6</version>
+  <version>3.4.7</version>
   <packaging>war</packaging>
 
   <prerequisites>
@@ -33,7 +33,7 @@
     <java.version>1.8</java.version>
     <javassist.version>3.21.0-GA</javassist.version>
     <javax.servlet.version>4.0.0-b03</javax.servlet.version>
-    <jhipster.server.version>1.1.0</jhipster.server.version>
+    <jhipster.server.version>1.3.1</jhipster.server.version>
     <jjwt.version>0.7.0</jjwt.version>
     <logstash-logback-encoder.version>4.8</logstash-logback-encoder.version>
     <m2e.apt.activation>jdt_apt</m2e.apt.activation>
@@ -96,7 +96,7 @@
     <sonar.tests>${project.basedir}/src/test/</sonar.tests>
 
     <!-- Spring properties -->
-    <springfox.version>2.4.0</springfox.version>
+    <springfox.version>2.8.0</springfox.version>
     <tis.shared.modules.version>2.0.1</tis.shared.modules.version>
     <undertow.version>1.4.10.Final</undertow.version>
     <validation-api.version>1.1.0.Final</validation-api.version>
@@ -587,7 +587,7 @@
         <!-- log configuration -->
         <logback.loglevel>DEBUG</logback.loglevel>
         <!-- default Spring profiles -->
-        <spring.profiles.active>dev</spring.profiles.active>
+        <spring.profiles.active>local</spring.profiles.active>
       </properties>
       <dependencies>
         <dependency>
