disable startup failure when no web.xml and enable the actuator health endpoint

--- a/reference-service/pom.xml
+++ b/reference-service/pom.xml
@@ -306,6 +306,7 @@
         <version>2.1.1</version>
         <configuration>
           <attachClasses>true</attachClasses>
+          <failOnMissingWebXml>false</failOnMissingWebXml>
         </configuration>
       </plugin>
       <plugin>
