--- a/reference-service/pom.xml
+++ b/reference-service/pom.xml
@@ -12,7 +12,7 @@
 
   <groupId>com.transformuk.hee.tis</groupId>
   <artifactId>reference-service</artifactId>
-  <version>3.7.1</version>
+  <version>3.7.2</version>
   <packaging>war</packaging>
 
   <prerequisites>
@@ -47,6 +47,7 @@
     <maven.version>3.0.0</maven.version>
     <metrics-spring.version>3.1.3</metrics-spring.version>
     <node.version>v6.10.0</node.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <!-- Sonar properties -->
     <project.testresult.directory>${project.build.directory}/test-results</project.testresult.directory>
     <prometheus-simpleclient.version>0.0.20</prometheus-simpleclient.version>
@@ -564,6 +565,33 @@
         </configuration>
       </plugin>
       <!-- jhipster-needle-maven-add-plugin -->
+
+      <!-- Checkstyle can be provided by tis-parent 3.0.2+ but requires additional migration. -->
+      <plugin>
+        <artifactId>maven-checkstyle-plugin</artifactId>
+        <groupId>org.apache.maven.plugins</groupId>
+        <version>3.0.0</version>
+        <configuration>
+          <configLocation>google_checks.xml</configLocation>
+          <consoleOutput>true</consoleOutput>
+        </configuration>
+        <dependencies>
+          <dependency>
+            <groupId>com.puppycrawl.tools</groupId>
+            <artifactId>checkstyle</artifactId>
+            <version>8.22</version>
+          </dependency>
+        </dependencies>
+        <executions>
+          <execution>
+            <id>validate</id>
+            <phase>validate</phase>
+            <goals>
+              <goal>check</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
   <profiles>
