chore: clean up scripts and bump version after rebase
TISNEW-5184

--- a/reference-service/pom.xml
+++ b/reference-service/pom.xml
@@ -12,7 +12,7 @@
 
   <groupId>com.transformuk.hee.tis</groupId>
   <artifactId>reference-service</artifactId>
-  <version>3.14.0</version>
+  <version>3.15.0</version>
   <packaging>war</packaging>
 
   <prerequisites>
@@ -506,9 +506,9 @@
           <executable>true</executable>
           <fork>true</fork>
           <!--
-          Enable the line below to have remote debugging of your application on port 5005-->
-          <jvmArguments>-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5007</jvmArguments>
-
+          Enable the line below to have remote debugging of your application on port 5005
+          <jvmArguments>-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005</jvmArguments>
+          -->
         </configuration>
       </plugin>
       <plugin>
