--- a/reference-service/src/main/resources/config/application.yml
+++ b/reference-service/src/main/resources/config/application.yml
@@ -163,3 +163,7 @@ jhipster:
 # ===================================================================
 
 application:
+
+sentry:
+  dsn: ${SENTRY_DSN:}
+  environment: ${SENTRY_ENVIRONMENT:}
