refactor:log level for Sites/Grades not found
TIS21-4739

--- a/reference-service/src/main/resources/config/application.yml
+++ b/reference-service/src/main/resources/config/application.yml
@@ -44,7 +44,7 @@ spring:
     open-in-view: false
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     database: MYSQL
-    show-sql: true
+    show-sql: false
     format-sql: true
     properties:
       hibernate.id.new_generator_mappings: true
